--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_ENV=development next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "cross-env NODE_ENV=production next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,10 +14,13 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "mongodb": "^4.12.1",
     "next": "13.0.4",
+    "next-connect": "^0.13.0",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +28,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "sass": "^1.56.1"
   }
 }
