--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,9 @@
 {
 	"root": true,
 	"plugins": ["@typescript-eslint"],
-	"extends": [
-		"next/core-web-vitals",
-		"plugin:@typescript-eslint/recommended",
-		"prettier"
-	],
+	"extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended", "prettier"],
 	"rules": {
+		"prefer-const": "error",
 		"@typescript-eslint/no-unused-vars": "error",
 		"@typescript-eslint/no-explicit-any": "error",
 		"no-var": 0
