--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,11 +1,11 @@
 {
-  "semi": true,
-  "trailingComma": "es5",
-  "singleQuote": true,
-  "jsxSingleQuote": true,
-  "tabWidth": 2,
-  "printWidth": 120,
-  "useTabs": false,
-  "bracketSpacing": true,
-  "arrowParens": "always"
+	"semi": true,
+	"trailingComma": "es5",
+	"singleQuote": true,
+	"jsxSingleQuote": true,
+	"tabWidth": 2,
+	"printWidth": 120,
+	"useTabs": true,
+	"bracketSpacing": true,
+	"arrowParens": "always"
 }
