--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "facemash",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development next dev",
-    "build": "next build",
-    "start": "cross-env NODE_ENV=production next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.0",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "dotenv": "^16.0.3",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "mongodb": "^4.12.1",
-    "next": "13.0.4",
-    "next-connect": "^0.13.0",
-    "prettier": "^2.7.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
-    "typescript": "4.9.3"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "sass": "^1.56.1"
-  }
+	"name": "facemash",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "cross-env NODE_ENV=development next dev",
+		"build": "next build",
+		"start": "cross-env NODE_ENV=production next start",
+		"lint": "next lint && prettier --write **/*"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.0",
+		"@types/node": "18.11.9",
+		"@types/react": "18.0.25",
+		"@types/react-dom": "18.0.9",
+		"@typescript-eslint/eslint-plugin": "^5.44.0",
+		"dotenv": "^16.0.3",
+		"eslint": "8.28.0",
+		"eslint-config-next": "13.0.4",
+		"eslint-config-prettier": "^8.5.0",
+		"mongodb": "^4.12.1",
+		"next": "13.0.4",
+		"next-connect": "^0.13.0",
+		"prettier": "^2.7.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-redux": "^8.0.5",
+		"typescript": "4.9.3"
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.3",
+		"sass": "^1.56.1"
+	}
 }
