--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 		"@types/node": "18.11.9",
 		"@types/react": "18.0.25",
 		"@types/react-dom": "18.0.9",
-		"@typescript-eslint/eslint-plugin": "^5.44.0",
+		"@typescript-eslint/eslint-plugin": "^5.47.1",
+		"axios": "^1.2.1",
 		"dotenv": "^16.0.3",
-		"eslint": "8.28.0",
-		"eslint-config-next": "13.0.4",
+		"eslint": "^8.30.0",
+		"eslint-config-next": "^13.1.1",
 		"eslint-config-prettier": "^8.5.0",
 		"mongodb": "^4.12.1",
+		"mongoose": "^6.8.2",
 		"next": "13.0.4",
 		"next-connect": "^0.13.0",
 		"prettier": "^2.7.1",
