--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/react-dom": "18.0.9",
 		"@typescript-eslint/eslint-plugin": "^5.47.1",
 		"axios": "^1.2.1",
+		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.0.3",
 		"eslint": "^8.30.0",
 		"eslint-config-next": "^13.1.1",
@@ -30,6 +31,7 @@
 		"typescript": "4.9.3"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
 		"cross-env": "^7.0.3",
 		"sass": "^1.56.1"
 	}
