--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.0",
-    "next": "13.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
-    "typescript": "4.9.3"
+    "@reduxjs/toolkit": "~1.9.0",
+    "next": "~13.0.4",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0",
+    "react-redux": "~8.0.5",
+    "typescript": "~4.9.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "~5.16.5",
     "@testing-library/react": "~14.0.0",
     "@types/jest": "~29.5.1",
-    "@types/node": "18.11.9",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "18.0.9",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@types/node": "~18.11.9",
+    "@types/react": "~18.0.25",
+    "@types/react-dom": "~18.0.9",
+    "@types/testing-library__jest-dom": "~5.14.5",
+    "@typescript-eslint/eslint-plugin": "~5.44.0",
     "jest": "~29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "sass": "^1.56.1",
+    "jest-environment-jsdom": "~29.5.0",
+    "sass": "~1.56.1",
     "ts-jest": "~29.1.0",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.7.1"
+    "eslint": "~8.28.0",
+    "eslint-config-next": "~13.0.4",
+    "eslint-config-prettier": "~8.5.0",
+    "prettier": "~2.7.1"
   }
 }
