--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "facemash",
   "version": "0.1.0",
   "private": true,
+  "pre-commit": [
+    "test"
+  ],  
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -27,13 +30,14 @@
     "@types/react-dom": "~18.0.9",
     "@types/testing-library__jest-dom": "~5.14.5",
     "@typescript-eslint/eslint-plugin": "~5.44.0",
-    "jest": "~29.5.0",
-    "jest-environment-jsdom": "~29.5.0",
-    "sass": "~1.56.1",
-    "ts-jest": "~29.1.0",
     "eslint": "~8.28.0",
     "eslint-config-next": "~13.0.4",
     "eslint-config-prettier": "~8.5.0",
-    "prettier": "~2.7.1"
+    "jest": "~29.5.0",
+    "jest-environment-jsdom": "~29.5.0",
+    "pre-commit": "~1.2.2",
+    "prettier": "~2.7.1",
+    "sass": "~1.56.1",
+    "ts-jest": "~29.1.0"
   }
 }
